--- a/build
+++ b/build
@@ -1,2 +1,2 @@
-rm KernelBuildJ2_*.zip
-zip -r9 KernelBuildJ2_v$v.zip * -x README KernelBuildJ2_*.zip build
+rm LzKernel_*.zip
+zip -r9 LzKernel_v$v.zip * -x README LzKernel_*.zip build
